fixed error visibility
* error badge is now hidden till populated

--- a/static/css/embed.css
+++ b/static/css/embed.css
@@ -39,7 +39,7 @@ a {
     position: absolute;
     top: 0;
     right: 0;
-    visibility: visible;
+    visibility: hidden;
     background-color: #fff;
 }
 
